feat: add views and controllers for products, users, and customers